2011-07-18  Jie Zhang  <jie.zhang@analog.com>

  * src/global/parse.c (getline): Remove.
  * src/cmd/cmd_bfin.c (cmd_bfin_run): Update comment.
  * src/lib/getline.c: New file.
  * src/lib/getdelim.c: New file.
  * src/lib/Makefile.am (libjtaglib_la_SOURCES): Add getdelim.c and
    getline.c.
  * sysdep.h (getline): Declare.
  * configure.ac: Check getdelim.
  * po/POTFILES.in: Add src/lib/getdelim.c and src/lib/getline.c.

2011-07-18  Jie Zhang  <jie.zhang@analog.com>

  * src/bsdl/Makefile.am (VHDL_BISON_OBJS): Correct object file name.
    (BSDL_BISON_OBJS): Likewise.
  * src/svf/Makefile.am (SVF_BISON_OBJS): Likewise.

2011-07-13  Mike Frysinger  <vapier@gentoo.org>

  * include/lex.h: New file for lex workarounds.
  * src/bsdl/vhdl_flex.l, src/bsdl/bsdl_flex.l, src/svf/svf_flex.l: Pull
    in new lex.h header to workaround random gcc warnings.
  * src/bsdl/Makefile.am, src/svf/Makefile.am: Drop -Wno-error now that
    the lex files compile warning free.

2011-07-13  Jie Zhang  <jie.zhang@analog.com>

  * include/urjtag/cable.h (urj_cable_param_key_t): Add
    URJ_CABLE_PARAM_KEY_FIRMWARE.
  * src/tap/cable.c (cable_param[]): Add URJ_CABLE_PARAM_KEY_FIRMWARE.
  * src/tap/cable/ice100.c: Include "libiberty.h".
    (params_t): Add firmware_filename.
    (HOST_PROGRAM_FLASH): Define.
    (ICE100B_DOC_URL): Define.
    (adi_usb_read_or_ret): Use urj_error_IO_set.
    (adi_usb_write_or_ret): Likewise.
    (struct flash_block): Define.
    (NIBBLE): Define.
    (HEX2): Define.
    (HEX4): Define.
    (ISHEX): Define.
    (ISHEX2): Define.
    (ISHEX4): Define.
    (ice_read_hex_file): New.
    (ice_calculate_crc): New.
    (ice_send_flash_data): New.
    (ice_firmware_crc): New.
    (ice_update_firmware): New.
    (ice_connect): Handle firmware parameter.
    (kit_10_connect): Initialize firmware_filename to NULL.
    (kit_20_connect): Likewise.
    (ice_init): Add firmware updater.
    (ice_cable_free): Free firmware_filename.
    (ice_cable_help): New.